welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:20: error: value length is not a member of Any
    for (k<-0 to T.length){
                   ^Array1:21: error: Any does not take parameters
      setCouleurBrosse(T(k))
                        ^